--- a/local/templates/main/css/template.css
+++ b/local/templates/main/css/template.css
@@ -1457,7 +1457,7 @@ h1 {
     width: 100%;
 }
 .form-row .label.big + .input {
-    width: calc(100% - 130px);
+    width: 100%;
 }
 .form-row .input-short {
     width: 220px !important;
@@ -1550,8 +1550,8 @@ input[type="tel"] {
     height: 331px;
 }
 .imege1 img {
-    height: 350px;
-    width: 227.7px;
+    height: auto;
+    width: 300px;
     position: absolute;
     bottom: 0;
     right: 0;
@@ -2333,7 +2333,7 @@ h1 {
     width: calc(100% - 100px);
 }
 .form-row .label.big {
-    width: 124px;
+    width: 160px;
 }
 .form-row .label.big + .input {
     width: calc(100% - 190px);
@@ -2372,7 +2372,7 @@ input[type="tel"] {
     box-sizing: border-box;
     padding: 0;
     vertical-align: middle;
-    width: 353.6px;
+    width: 100%;
     height: 32px;
     font: inherit;
     font-size: 15px;
@@ -2967,6 +2967,13 @@ input[type="tel"] {
     .bl_menu_table_day_row_col_name p{
         margin-bottom: 10px;
     }
+    .imege1_noactive img {
+        height: 60px;
+        width: 60px;
+        border: solid 1px #252525;
+        margin-right: 4px;
+        margin-bottom: 70px;
+    }
       
 }
 
@@ -3427,7 +3434,7 @@ input[type="tel"] {
         width: calc(100% - 100px);
     }
     .form-row .label.big {
-        width: 132px;
+        width: 170px;
     }
     .form-row .label.big + .input {
         width: calc(100% - 190px);
@@ -3466,7 +3473,7 @@ input[type="tel"] {
         box-sizing: border-box;
         padding: 0;
         vertical-align: middle;
-        width: 457.25px;
+        width: 100%;
         height: 32px;
         font: inherit;
         font-size: 15px;
@@ -4106,6 +4113,13 @@ margin-bottom: 263.5px;
     .bl_menu_table_day_row_col_name p{
         margin-bottom: 10px;
     }
+    .imege1_noactive img {
+        height: 78px;
+        width: 78px;
+        border: solid 1px #252525;
+        margin-right: 29px;
+        margin-bottom: 60px;
+    }
 
 }
 @media (min-width: 1200px) {
@@ -4546,7 +4560,7 @@ margin-bottom: 263.5px;
         width: calc(100% - 100px);
     }
     .form-row .label.big {
-        width: 154px;
+        width: 180px;
     }
     .form-row .label.big + .input {
         width: calc(100% - 190px);
@@ -4585,7 +4599,7 @@ margin-bottom: 263.5px;
         box-sizing: border-box;
         padding: 0;
         vertical-align: middle;
-        width: 590px;
+        width: 100%;
         height: 32px;
         font: inherit;
         font-size: 15px;
@@ -5230,6 +5244,13 @@ margin-bottom: 340px;
     .bl_menu_table_day_row_col_name p{
         margin-bottom: 10px;
     }
+    .imege1_noactive img {
+        height: 88px;
+        width: 88px;
+        border: solid 1px #252525;
+        margin-right: 22px;
+        margin-bottom: 56px;
+    }
 
 }
 
@@ -5496,7 +5517,7 @@ margin-bottom: 340px;
         width: calc(100% - 100px);
     }
     .form-row .label.big {
-        width: 154px;
+        width: 180px;
     }
     .form-row .label.big + .input {
         width: calc(100% - 190px);
@@ -5535,7 +5556,7 @@ margin-bottom: 340px;
         box-sizing: border-box;
         padding: 0;
         vertical-align: middle;
-        width: 590px;
+        width: 100%;
         height: 32px;
         font: inherit;
         font-size: 15px;
@@ -6149,8 +6170,16 @@ margin-left: -10px;}
     .bl_menu_table_day_row_col_name p{
         margin-bottom: 10px;
     }
+    .imege1_noactive img {
+        height: 88px;
+        width: 88px;
+        border: solid 1px #252525;
+        margin-right: 12px;
+        margin-bottom: 56px;
+    }
     
 }
+
 
 /* конец медиа */
 .hei11 {
@@ -6868,6 +6897,88 @@ display:none;
     .zakaz-login {
         width: 100%;
     }
+    .imege1_noactive img {
+        height: 55px;
+        width: 55px;
+        border: solid 1px #252525;
+        margin-right: 40px;
+        margin-bottom: 74px;
+    }
+    .image1_bottom {
+        margin-bottom: 45px;
+    }
+    .popup-close {
+        font-size: 15px;
+        position: absolute;
+        top: 10%;
+        left: 85%;
+        margin-top: -30px;
+        margin-left: -80px;
+        padding: 20px 28px;
+        box-sizing: border-box;
+        text-align: left;
+        width: 220px;
+        height: 60px;
+        /* border: 1px solid #252525; */
+        -webkit-transform: rotate(-90deg);
+        transform: rotate(-90deg);
+        /* font-family: DINPro, Arial, sans-serif; */
+        /* font-weight: bold; */
+        /* font-style: normal; */
+        /* font-stretch: normal; */
+        /* font-weight: 300; */
+        /* color: #252525; */
+        /* text-transform: uppercase; */
+        /* cursor: pointer; */
+        background: url(./images/popup-close.svg) no-repeat 157px 12px;
+        background-size: 30px 30px;
+    }
+    .checkbox span {
+        position: relative;
+        display: inline-block;
+        vertical-align: middle;
+        padding-left: 30px;
+        font-size: 15px;
+        line-height: 2;
+        color: #878787;
+        margin-top: 10px;
+    }
+    .one_product_price button,
+    input[type="button"],
+    [role="button"],
+    .button,
+    .button-white {
+        display: inline-block;
+        /*border: none;*/
+        border: 1px solid #64b357;
+        border-radius: 0;
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        appearance: none;
+        text-decoration: none;
+        /* cursor: default; */
+        cursor: pointer;
+        height: 60px;
+        background-color: #64b357;
+        color: white;
+        font: inherit;
+        font-size: 15px;
+        font-family: DINPro, Arial, sans-serif;
+        font-weight: bold;
+        font-style: normal;
+        font-stretch: normal;
+        padding: 0 20px;
+        width: auto;
+        min-width: 220px;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+        text-align: center;
+        line-height: normal;
+        outline: none;
+        text-transform: uppercase;
+    }
 }
 
 
@@ -6880,7 +6991,14 @@ display:none;
     color: #878787;
 }
 
+
 .imege1_noactive {
+    position: relative;
+    float: left;
+    z-index: 1000;
     height: 100px;
-    width: 100px;
+}
+
+.imege_height {
+    height: 100%;
 }
