--- a/local/templates/main/css/template.css
+++ b/local/templates/main/css/template.css
@@ -1471,7 +1471,7 @@ h1 {
     color: #252525;
 }
 .hei4 {
-    width: 445px;
+    width: auto;
     margin-top: 66px;
 }
 .hei4 input[type="text"],
@@ -1564,6 +1564,7 @@ input[type="tel"] {
 .title_element1 h1 {
     padding: 14px 0px 25px 0px;
     background-color: rgba(255, 255, 255, 0.5);
+    padding-left: 15px;
 }
 .cabinet-head__buttons {
     margin-top: -55px;
@@ -1952,7 +1953,7 @@ display: none;
     cursor: pointer;
 }
 .line_one {
-    width: 80%;
+    width: 70%;
     height: 1px;
     background-color: #000000;
     /* border: solid 1px #252525; */
@@ -1962,7 +1963,7 @@ display: none;
     content: '';
     margin-top: -8px;
     /* float: right; */
-    margin-left: 80%;
+    margin-left: 70%;
     /* margin-left: -1px; */
     width: 12px;
     height: 19px;
@@ -2053,7 +2054,7 @@ display: none;
     margin-left: -36px;
 }
 .popup-content .main-unit {
-    max-width: 580px;
+    max-width: 100%;
 }
 
     
@@ -2895,7 +2896,7 @@ input[type="tel"] {
     margin-left: -36px;
 }
 .popup-content .main-unit {
-    max-width: 580px;
+    max-width: 100%;
 }
 
 .bl_ind_cont {
@@ -2973,6 +2974,10 @@ input[type="tel"] {
         border: solid 1px #252525;
         margin-right: 4px;
         margin-bottom: 70px;
+    }
+    .button, input[type="button"], [role="button"], .button, .button-white {
+        width: 220px;
+        height: 60px;
     }
       
 }
@@ -4042,7 +4047,7 @@ margin-bottom: 263.5px;
 }
 
 .popup-content .main-unit {
-    max-width: 730px;
+    max-width: 100%;
 }
 .bl_ind_cont {
   margin-bottom: 155px; }
@@ -4119,6 +4124,10 @@ margin-bottom: 263.5px;
         border: solid 1px #252525;
         margin-right: 29px;
         margin-bottom: 60px;
+    }
+    .button, input[type="button"], [role="button"], .button, .button-white {
+        width: 220px;
+        height: 60px;
     }
 
 }
@@ -5173,7 +5182,7 @@ margin-bottom: 340px;
 }
 
 .popup-content .main-unit {
-    max-width: 1280px;
+    max-width: 100%;
 }
 .bl_ind_cont {
   margin-bottom: 195px; }
@@ -5251,10 +5260,18 @@ margin-bottom: 340px;
         margin-right: 22px;
         margin-bottom: 56px;
     }
+    .button, input[type="button"], [role="button"], .button, .button-white {
+        width: 220px;
+        height: 60px;
+    }
 
 }
 
 @media (min-width: 1340px) {
+    .button, input[type="button"], [role="button"], .button, .button-white {
+        width: 220px;
+        height: 60px;
+    }
 .bl_ind_cont {
   margin-bottom: 195px; }
   
@@ -6101,7 +6118,7 @@ margin-left: -10px;}
 }
 
 .popup-content .main-unit {
-    max-width: 1064px;
+    max-width: 100%;
 }
     .menu_class_0 {
         position: relative;
@@ -6879,6 +6896,7 @@ display:none;
         text-align: center;
         color: #252525;
         text-transform: uppercase;
+        min-height: 45px;
     }
     .select-cont .select-menu__item {
         display: block;
@@ -6978,6 +6996,22 @@ display:none;
         line-height: normal;
         outline: none;
         text-transform: uppercase;
+    }
+    .one_product_tx {
+        width: auto;
+    }
+    .img_close {
+        background: url(../images/close.png) no-repeat 100% 0;
+        height: 12px;
+        width: 12px;
+        margin-bottom: 73px;
+    }
+    button,
+    input[type="button"],
+    [role="button"],
+    .button,
+    .button-white {
+        width: 100%;
     }
 }
 
