--- a/local/templates/main/css/template.css
+++ b/local/templates/main/css/template.css
@@ -946,6 +946,15 @@ body {
     display: none !important;
 }
 @media (max-width: 766px) {
+    .img_card_1 {
+        height: 350px;
+        width: 240px;
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        z-index: 1;
+        overflow: hidden;
+    }
 .col-xs-1,
 .col-xs-2,
 .col-xs-3,
@@ -1331,7 +1340,7 @@ h2 {
     display: block;
     position: relative;
     width: 220px;
-    height: 110px;
+    min-height: 110px;
     float: left;
     margin: 0 20px 30px 0;
     font-family: DINPro, Arial, sans-serif;
@@ -1668,15 +1677,15 @@ input[type="tel"] {
     left: 75px;
 }
 .container1 {
-    width: 767px;
+    /*width: 767px;*/
     margin-right: auto;
     margin-left: auto;
-    padding-left: 15px;
-    padding-right: 15px;
+    padding-left: 60px;
+    padding-right: 60px;
     z-index: 120;
 }
 .container2 {
-    width: calc(100% - 60px);
+    width: calc(100% - 120px);
     height: 90px;
     margin-right: auto;
     margin-left: auto;
@@ -1690,12 +1699,13 @@ input[type="tel"] {
     margin-left: auto;
     padding-left: 15px;
     padding-right: 15px;
+    position: relative;
 }
 .container4 {
-    width: calc(100% - 60px);
-    width: -moz-calc(100% - 60px);
-    width: -webkit-calc(100% - 60px);
-    width: -webkit-calc(100% - 60px);
+    width: calc(100% - 120px);
+    width: -moz-calc(100% - 120px);
+    width: -webkit-calc(100% - 120px);
+    width: -webkit-calc(100% - 120px);
     height: 187px;
     margin-right: auto;
     margin-left: auto;
@@ -2097,7 +2107,7 @@ display: none;
     padding-left: 60px;
 }
 .container {
-    width: 767px;
+    width: 667px;
 }
 .page-header__img {
     display: block;
@@ -2145,7 +2155,7 @@ display: none;
 }
 .page-content__article2 {
     position: relative;
-    padding-bottom: 131px;
+    /*padding-bottom: 131px;*/
 }
 .page-content__article p {
     margin-bottom: 20px;
@@ -2214,8 +2224,8 @@ display: none;
 .idea-advantages__item {
     display: block;
     position: relative;
-    width: 220px;
-    height: 110px;
+    width: 200px;
+    min-height: 110px;
     float: left;
     margin: 0 20px 20px 0;
     font-family: DINPro, Arial, sans-serif;
@@ -2393,7 +2403,7 @@ input[type="tel"] {
     background-color: transparent;
     background: -webkit-linear-gradient(top, transparent 41px, #d8d8d8 41px, #d8d8d8 42px, transparent 42px, transparent 83px, #d8d8d8 83px, #d8d8d8 84px, transparent 84px, transparent 125px, #d8d8d8 125px, #d8d8d8 126px, transparent 126px);
     background: linear-gradient(to bottom, transparent 41px, #d8d8d8 41px, #d8d8d8 42px, transparent 42px, transparent 83px, #d8d8d8 83px, #d8d8d8 84px, transparent 84px, transparent 125px, #d8d8d8 125px, #d8d8d8 126px, transparent 126px);
-    width: 353.6px;
+    width: 100%;
     font: inherit;
     line-height: 42px;
     height: 126px;
@@ -2429,9 +2439,8 @@ input[type="tel"] {
     height: 331px;
 }
 .imege1 img {
-    height: 350px;
-    width: 227.7px;
-    position: absolute;
+    height: 100%;
+    width: auto;
     bottom: 0;
     right: 0;
     z-index: 1;
@@ -2546,7 +2555,7 @@ input[type="tel"] {
     left: 75px;
 }
 .container1 {
-    width: 767px;
+    width: 667px;
     margin-right: auto;
     margin-left: auto;
     padding-left: 15px;
@@ -2554,7 +2563,7 @@ input[type="tel"] {
     z-index: 120;
 }
 .container2 {
-    width: 737px;
+    width: 637px;
     height: 90px;
     margin-right: auto;
     margin-left: auto;
@@ -2568,9 +2577,10 @@ input[type="tel"] {
     margin-left: auto;
     padding-left: 15px;
     padding-right: 15px;
+    position: relative;
 }
 .container4 {
-    width: 737px;
+    width: 630px;
     height: 187px;
     margin-right: auto;
     margin-left: auto;
@@ -2754,7 +2764,7 @@ input[type="tel"] {
 }
 .pt1 {
     text-align: right;
-    margin-top: 50px;
+    margin-top: 90px;
 }
 .main-programs__blocks {
     position: relative;
@@ -2976,13 +2986,22 @@ input[type="tel"] {
         margin-bottom: 70px;
     }
     .button, input[type="button"], [role="button"], .button, .button-white {
-        width: 220px;
+        width: auto;
         height: 60px;
     }
       
 }
 
 @media (min-width: 992px) {
+    .img_card_1 {
+        height: 612px;
+        width: 380px;
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        z-index: 1;
+        overflow: hidden;
+    }
     .basket-item__remove:hover {
       font-size: 14px;
       background-position: 100% -22px; }
@@ -3028,7 +3047,7 @@ input[type="tel"] {
         padding-left: 60px;
     }
     .container {
-        width: 970px;
+        width: 880px;
     }
     .col-md-1,
     .col-md-2,
@@ -3238,7 +3257,7 @@ input[type="tel"] {
     }
     .page-content__article2 {
         position: relative;
-        padding-bottom: 170px;
+       /* padding-bottom: 170px;*/
         /*padding-top: 102px;*/
     }
     .page-content__article p {
@@ -3312,8 +3331,8 @@ input[type="tel"] {
     .idea-advantages__item {
         display: block;
         position: relative;
-        width: 300px;
-        height: 150px;
+        width: 260px;
+        min-height: 150px;
         float: left;
         margin: 0 20px 20px 0;
         font-family: DINPro, Arial, sans-serif;
@@ -3498,7 +3517,7 @@ input[type="tel"] {
         background-color: transparent;
         background: -webkit-linear-gradient(top, transparent 41px, #d8d8d8 41px, #d8d8d8 42px, transparent 42px, transparent 83px, #d8d8d8 83px, #d8d8d8 84px, transparent 84px, transparent 125px, #d8d8d8 125px, #d8d8d8 126px, transparent 126px);
         background: linear-gradient(to bottom, transparent 41px, #d8d8d8 41px, #d8d8d8 42px, transparent 42px, transparent 83px, #d8d8d8 83px, #d8d8d8 84px, transparent 84px, transparent 125px, #d8d8d8 125px, #d8d8d8 126px, transparent 126px);
-        width: 457.25px;
+        width: 100%;
         font: inherit;
         line-height: 42px;
         height: 126px;
@@ -3539,9 +3558,8 @@ input[type="tel"] {
         height: 420px;
     }
     .imege1 img {
-        height: 575px;
-        width: 360px;
-        position: absolute;
+        height: 100%;
+        width: auto;
         bottom: 0;
         right: 0;
         z-index: 1;
@@ -3666,7 +3684,7 @@ input[type="tel"] {
    }
    
    .container1 {
-       width: 970px;
+       width: 880px;
         /* height: 66px; */
         margin-right: auto;
         margin-left: auto;
@@ -3676,7 +3694,7 @@ input[type="tel"] {
    }
    
    .container2 {
-       width: 940px;
+       width: 850px;
         height: 90px;
         margin-right: auto;
         margin-left: auto;
@@ -3685,15 +3703,16 @@ input[type="tel"] {
    }
    
    .container3 {
-       width: 940px;
+       width: 880px;
         height: 156px;
         margin-right: auto;
         margin-left: auto;
         padding-left: 15px;
         padding-right: 15px;
+       position: relative;
    }
      .container4 {
-       width: 942px;
+       width: 845px;
         height: 187px;
         margin-right: auto;
         margin-left: auto;
@@ -3890,7 +3909,7 @@ margin-bottom: 263.5px;
 }
 .pt1 {
     text-align: right;
-    margin-top: 50px;
+    margin-top: 90px;
 }
   .main-programs__blocks {
     position: relative;
@@ -4126,12 +4145,21 @@ margin-bottom: 263.5px;
         margin-bottom: 60px;
     }
     .button, input[type="button"], [role="button"], .button, .button-white {
-        width: 220px;
+        width: auto;
         height: 60px;
     }
 
 }
 @media (min-width: 1200px) {
+    .img_card_1 {
+        height: 612px;
+        width: 380px;
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        z-index: 1;
+        overflow: hidden;
+    }
     .basket-item__remove:hover {
       font-size: 15px;
       background-position: 100% -22px; }
@@ -4154,7 +4182,7 @@ margin-bottom: 263.5px;
     }
     
     .container {
-        width: 1170px;
+        width: 1090px;
     }
     .page-header__text {
         width: 502px;
@@ -4364,11 +4392,11 @@ margin-bottom: 263.5px;
     }
     .page-content__article {
         position: relative;
-        padding-top: 236px;
+        padding-top: 197px;
     }
     .page-content__article2 {
         position: relative;
-        padding-bottom: 219px;
+        /*padding-bottom: 219px;*/
         /*padding-top: 132px;*/
     }
     .page-content__article p {
@@ -4443,7 +4471,7 @@ margin-bottom: 263.5px;
         display: block;
         position: relative;
         width: 300px;
-        height: 150px;
+        min-height: 150px;
         float: left;
         margin: 0 20px 20px 0;
         font-family: DINPro, Arial, sans-serif;
@@ -4628,7 +4656,7 @@ margin-bottom: 263.5px;
         background-color: transparent;
         background: -webkit-linear-gradient(top, transparent 41px, #d8d8d8 41px, #d8d8d8 42px, transparent 42px, transparent 83px, #d8d8d8 83px, #d8d8d8 84px, transparent 84px, transparent 125px, #d8d8d8 125px, #d8d8d8 126px, transparent 126px);
         background: linear-gradient(to bottom, transparent 41px, #d8d8d8 41px, #d8d8d8 42px, transparent 42px, transparent 83px, #d8d8d8 83px, #d8d8d8 84px, transparent 84px, transparent 125px, #d8d8d8 125px, #d8d8d8 126px, transparent 126px);
-        width: 590px;
+        width: 100%;
         font: inherit;
         line-height: 42px;
         height: 126px;
@@ -4670,9 +4698,8 @@ margin-bottom: 263.5px;
         height: 420px;
     }
     .imege1 img {
-        height: 612px;
-        width: 380px;
-        position: absolute;
+        height: 100%;
+        width: auto;
         bottom: 0;
         right: 0;
         z-index: 1;
@@ -4797,7 +4824,7 @@ margin-bottom: 263.5px;
    }
    
    .container1 {
-       width: 1170px;
+       width: 1090px;
         /* height: 66px; */
         margin-right: auto;
         margin-left: auto;
@@ -4807,7 +4834,7 @@ margin-bottom: 263.5px;
    }
    
    .container2 {
-       width: 1140px;
+       width: 1060px;
         height: 90px;
         margin-right: auto;
         margin-left: auto;
@@ -4816,15 +4843,16 @@ margin-bottom: 263.5px;
    }
    
    .container3 {
-       width: 1140px;
+       width: 1090px;
         height: 156px;
         margin-right: auto;
         margin-left: auto;
         padding-left: 15px;
         padding-right: 15px;
+       position: relative;
    }
      .container4 {
-       width: 1142px;
+       width: 1060px;
         height: 187px;
         margin-right: auto;
         margin-left: auto;
@@ -5016,7 +5044,7 @@ margin-bottom: 340px;
 }
 .pt1 {
     text-align: right;
-    margin-top: 50px;
+    margin-top: 112px;
 }
 .main-programs__blocks {
     position: relative;
@@ -5116,7 +5144,7 @@ margin-bottom: 340px;
 .cross_tree_all{
     float: right;
     position: absolute;
-    top: 675px;
+    top: 682px;
     right: 0;
 }
 .cross_tree_all_to{
@@ -5261,15 +5289,24 @@ margin-bottom: 340px;
         margin-bottom: 56px;
     }
     .button, input[type="button"], [role="button"], .button, .button-white {
-        width: 220px;
+        width: auto;
         height: 60px;
     }
 
 }
 
 @media (min-width: 1340px) {
+    .img_card_1 {
+        height: 612px;
+        width: 380px;
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        z-index: 1;
+        overflow: hidden;
+    }
     .button, input[type="button"], [role="button"], .button, .button-white {
-        width: 220px;
+        width: auto;
         height: 60px;
     }
 .bl_ind_cont {
@@ -5279,7 +5316,7 @@ margin-bottom: 340px;
       font-size: 15px;
       background-position: 100% -22px; }
     .siteHeader {
-        margin-bottom: 60px;
+        margin-bottom: 57px;
 }
 
     .bl_catalog_filter_left {
@@ -5305,7 +5342,7 @@ margin-bottom: 340px;
     margin-top: -6px;
 }
     .container {
-        width: 1280px;
+        width: 1220px;
     }
     .page-header__img {
         display: block;
@@ -5345,11 +5382,11 @@ margin-bottom: 340px;
     }
     .page-content__article {
         position: relative;
-        padding-top: 236px;
+        padding-top: 197px;
     }
     .page-content__article2 {
         position: relative;
-        padding-bottom: 219px;
+       /* padding-bottom: 219px;*/
         /*padding-top: 225px;*/
     }
     .page-content__article p {
@@ -5407,8 +5444,8 @@ margin-bottom: 340px;
     .idea-advantages__item {
         display: block;
         position: relative;
-        width: 300px;
-        height: 150px;
+        width: 324px;
+        min-height: 160px;
         float: left;
         margin: 0 20px 20px 0;
         font-family: DINPro, Arial, sans-serif;
@@ -5598,7 +5635,7 @@ margin-bottom: 340px;
         
         background: linear-gradient(to bottom, transparent 50px, #d8d8d8 50px, #d8d8d8 51px, transparent 51px, transparent 101px, #d8d8d8 101px, #d8d8d8 102px, transparent 102px, transparent 152px, #d8d8d8 152px, #d8d8d8 153px, transparent 153px);
         font-size: 15px;
-        width: 590px;
+        width: 100%;
         font: inherit;
         line-height: 54px;
         height: 180px;
@@ -5639,9 +5676,8 @@ margin-bottom: 340px;
         height: 420px;
     }
     .imege1 img {
-        height: 612px;
-        width: 380px;
-        position: absolute;
+        height: 100%;
+        width: auto;
         bottom: 0;
         right: 0;
         z-index: 1;
@@ -5769,7 +5805,7 @@ margin-bottom: 340px;
    }
    
    .container1 {
-       width: 1280px;
+       width: 1220px;
         /* height: 66px; */
         margin-right: auto;
         margin-left: auto;
@@ -5847,12 +5883,13 @@ margin-left: -10px;}
    }
    
    .container3 {
-       width: 1250px;
+       width: 1190px;
         height: 156px;
         margin-right: auto;
         margin-left: auto;
         padding-left: 15px;
         padding-right: 15px;
+       position: relative;
    }
      .container4 {
        width: 737px;
@@ -6048,7 +6085,7 @@ margin-left: -10px;}
 .cross_tree_all{
     float: right;
     position: absolute;
-    top: 675px;
+    top: 682px;
     right: 0;
 }
 .cross_tree_all_to{
@@ -6080,7 +6117,7 @@ margin-left: -10px;}
     top: 800px;
 }
 .container2 {
-    width: 1250px;
+    width: 1190px;
     height: 90px;
     margin-right: auto;
     margin-left: auto;
@@ -6088,7 +6125,7 @@ margin-left: -10px;}
     padding-right: 15px;
 }
     .container4 {
-    width: 1250px;
+    width: 1190px;
     height: 187px;
     margin-right: auto;
     margin-left: auto;
@@ -6266,6 +6303,15 @@ margin-left: -10px;}
 }
 
 @media (min-width: 767px) and (max-width: 991px){
+    .img_card_1 {
+        height: 460px;
+        width: 285px;
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        z-index: 1;
+        overflow: hidden;
+    }
     
   .col-sm-12 {
     width: 100%;
@@ -6688,8 +6734,8 @@ margin-left: -10px;}
   .container {
     margin-right: auto;
     margin-left: auto;
-    padding-left: 30px;
-    padding-right: 30px;
+    padding-left: 60px;
+    padding-right: 60px;
 }
 .hei29 {
     padding-left: 0px;
@@ -7013,6 +7059,10 @@ display:none;
     .button-white {
         width: 100%;
     }
+
+    .basket-popup-button {
+        width: 50px;
+    }
 }
 
 
@@ -7028,7 +7078,7 @@ display:none;
 
 .imege1_noactive {
     position: relative;
-    float: left;
+    float: right;
     z-index: 1000;
     height: 100px;
 }
@@ -7036,3 +7086,9 @@ display:none;
 .imege_height {
     height: 100%;
 }
+
+.rub {
+    /* font-family: Arial Bold; */
+    font-family: DINPro, Arial, sans-serif;
+}
+
