Basket names, easing program days.

--- a/local/templates/main/css/template.css
+++ b/local/templates/main/css/template.css
@@ -2512,7 +2512,7 @@ input[type="tel"] {
     position: relative;
     height: 516px;
     z-index: 100;
-    width: 425px;
+    width: 437px;
     top: 75px;
 }
 .carousel_content1 h3 {
@@ -2571,7 +2571,7 @@ input[type="tel"] {
     padding-right: 15px;
 }
 .container3 {
-    width: 737px;
+    width: 637px;
     height: 156px;
     margin-right: auto;
     margin-left: auto;
@@ -2983,7 +2983,7 @@ input[type="tel"] {
         width: 60px;
         border: solid 1px #252525;
         margin-right: 4px;
-        margin-bottom: 70px;
+        margin-top: -30px;
     }
     .button, input[type="button"], [role="button"], .button, .button-white {
         width: auto;
@@ -3632,7 +3632,7 @@ input[type="tel"] {
         position: relative;
         height: 516px;
         z-index: 100;
-        width: 540px;
+        width: 567px;
         top: 86px; 
     }
     .carousel_content1 h3 {
@@ -3703,7 +3703,7 @@ input[type="tel"] {
    }
    
    .container3 {
-       width: 880px;
+       width: 850px;
         height: 156px;
         margin-right: auto;
         margin-left: auto;
@@ -4142,7 +4142,7 @@ margin-bottom: 263.5px;
         width: 78px;
         border: solid 1px #252525;
         margin-right: 29px;
-        margin-bottom: 60px;
+        margin-top: -38px;
     }
     .button, input[type="button"], [role="button"], .button, .button-white {
         width: auto;
@@ -4772,12 +4772,12 @@ margin-bottom: 263.5px;
         position: relative;
         height: 516px;
         z-index: 100;
-        width: 635px;
+        width: 667px;
         top: 105px;   
     }
     .carousel_content1 h3 {
     font-family: DINPro;
-    font-size: 60px;
+    font-size: 55px;
     font-weight: bold;
     font-style: normal;
     font-stretch: normal;
@@ -4843,7 +4843,7 @@ margin-bottom: 263.5px;
    }
    
    .container3 {
-       width: 1090px;
+       width: 1060px;
         height: 156px;
         margin-right: auto;
         margin-left: auto;
@@ -5286,7 +5286,7 @@ margin-bottom: 340px;
         width: 88px;
         border: solid 1px #252525;
         margin-right: 22px;
-        margin-bottom: 56px;
+        margin-top: -44px;
     }
     .button, input[type="button"], [role="button"], .button, .button-white {
         width: auto;
@@ -5752,7 +5752,7 @@ margin-bottom: 340px;
         position: relative;
         height: 516px;
         z-index: 100;
-        width: 635px;
+        width: 737px;
         top: 105px;   
     }
     .carousel_content1 h3 {
@@ -6229,7 +6229,7 @@ margin-left: -10px;}
         width: 88px;
         border: solid 1px #252525;
         margin-right: 12px;
-        margin-bottom: 56px;
+        margin-top: -44px;
     }
     
 }
@@ -6966,7 +6966,7 @@ display:none;
         width: 55px;
         border: solid 1px #252525;
         margin-right: 40px;
-        margin-bottom: 74px;
+        margin-top: -27.5px;
     }
     .image1_bottom {
         margin-bottom: 45px;
