--- a/local/templates/main/template_styles.css
+++ b/local/templates/main/template_styles.css
@@ -7010,13 +7010,15 @@ a.button, a.button-white {
   .select-cont .select-menu {
     display: none;
     position: absolute;
-    top: 30px;
+    top: 29px;
     left: 0;
     right: 0;
     border: 1px solid #252525;
-    border-top: none;
+    /*border-top: none;*/
     text-align: left;
-    background-color: #f9f9f9; }
+    background-color: #f9f9f9; 
+    min-width: 125px;
+    }
     .select-cont .select-menu__item {
       display: block;
       line-height: 1.2;
