--- a/local/templates/main/css/template.css
+++ b/local/templates/main/css/template.css
@@ -1576,9 +1576,9 @@ input[type="tel"] {
     padding-left: 15px;
 }
 .cabinet-head__buttons {
-    margin-top: -55px;
+    /*margin-top: -55px;*/
     float: right;
-    margin-right: 110px;
+    /*margin-right: 110px;*/
     line-height: 70px;
     font-size: 0;
 }
@@ -1685,7 +1685,7 @@ input[type="tel"] {
     z-index: 120;
 }
 .container2 {
-    width: calc(100% - 120px);
+    width: calc(100% - 60px);
     height: 90px;
     margin-right: auto;
     margin-left: auto;
@@ -1702,10 +1702,10 @@ input[type="tel"] {
     position: relative;
 }
 .container4 {
-    width: calc(100% - 120px);
-    width: -moz-calc(100% - 120px);
-    width: -webkit-calc(100% - 120px);
-    width: -webkit-calc(100% - 120px);
+    width: calc(100% - 60px);
+    width: -moz-calc(100% - 60px);
+    width: -webkit-calc(100% - 60px);
+    width: -webkit-calc(100% - 60px);
     height: 187px;
     margin-right: auto;
     margin-left: auto;
@@ -1747,8 +1747,10 @@ input[type="tel"] {
     top: -3px;
 }
 .one_product_price_buy a {
-    min-width: 140px;
-    margin-left: 20px;
+    min-width: 120px;
+    margin-left: 10px;
+    width: 120px;
+    height: 60px;
 }
 .one_product_price_buy {
     margin-bottom: 30px;
@@ -1764,7 +1766,7 @@ input[type="tel"] {
 }
 .one_product_char_item {
     float: left;
-    width: 90px;
+    width: 75px;
 }
 .one_product_char {
     margin-bottom: 69px;
@@ -1778,8 +1780,11 @@ input[type="tel"] {
     box-sizing: border-box;
     -moz-box-sizing: border-box;
     text-align: center;
-    margin-right: -20px;
+    margin-right: 2px;
     padding-left: 25px;
+}
+.bl_filter_item {
+    width: 40%;
 }
 .bl_catalog_filter_left {
     margin: 0 0px 0 45px;
@@ -1847,6 +1852,7 @@ input[type="tel"] {
 }
 .bl_filter_item + .bl_filter_item {
     margin-left: 0px;
+    text-align: left;
 }
 .hei9 {
     height: 360px;
@@ -6529,6 +6535,55 @@ margin-left: -10px;}
 }
 
 @media (max-width: 766px) {
+    .basket-popup-button .basket-popup-button-content {
+        position: fixed;
+        margin-left: 0px;
+        /* margin-top: calc(100% + 200px); */
+        /* top: 0; */
+        width: 85%;
+        height: 60px;
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+        text-align: center;
+        font-size: 14px;
+        margin-top: 0;
+        top: calc(100% - 36px);
+    }
+    @media (max-width: 766px) {
+        .basket-popup-button {
+            background: #fff;
+            position: fixed;
+            margin-top: 0;
+            top: calc(100% - 59px);
+            left: 0;
+            /* margin-top: 0px; */
+            /* margin-left: -80px; */
+            padding: 20px 28px;
+            box-sizing: border-box;
+            text-align: center;
+            width: 60px;
+            height: 60px;
+            border-right: 1px solid #252525;
+            border-top: 1px solid #252525;
+            border-bottom: 1px solid #252525;
+            font-family: DINPro, Arial, sans-serif;
+            font-weight: bold;
+            font-style: normal;
+            font-stretch: normal;
+            font-weight: 300;
+            color: #252525;
+            text-transform: uppercase;
+            cursor: pointer;
+            z-index: 1000;
+        }
+    .zakaz-buttons * + * {
+        margin-left: 0px;
+        margin-top:5px;
+    }
+    .basket-item__image img {
+        width: 60px;
+        height: 60px;
+    }
 .col-xs-1, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9, .col-xs-10, .col-xs-11, .col-xs-12 {
   float: left;
 }
@@ -6734,8 +6789,8 @@ margin-left: -10px;}
   .container {
     margin-right: auto;
     margin-left: auto;
-    padding-left: 60px;
-    padding-right: 60px;
+    padding-left: 30px;
+    padding-right: 30px;
 }
 .hei29 {
     padding-left: 0px;
@@ -7047,10 +7102,10 @@ display:none;
         width: auto;
     }
     .img_close {
-        background: url(../images/close.png) no-repeat 100% 0;
+        background: url(../images/close_min.png) no-repeat 100% 0;
         height: 12px;
         width: 12px;
-        margin-bottom: 73px;
+        margin-top: 22px;
     }
     button,
     input[type="button"],
@@ -7061,9 +7116,250 @@ display:none;
     }
 
     .basket-popup-button {
-        width: 50px;
+        width: 101%;
     }
+
+    .popup_style_1 {
+        padding-left: 5px;
+        padding-right: 5px;
+    }
+
+    .popup_style_2 {
+        padding-left: 5px;
+        padding-right: 5px;
+    }
+    .basket-item__value:nth-child(2) {
+        text-align: left;
+        margin-top: 10px;
+    }
+    .basket-item__value:nth-child(3) {
+        text-align: left;
+        margin-top: 10px;
+    }
+    .basket-item__count {
+        height: 20px !important;
+        line-height: 20px !important;
+        width: 25px !important;
+        text-align: center !important;
+    }
+    input[type="text"], input[type="password"], input[type="email"], input[type="search"], input[type="tel"] {
+        font-size: 11px;
+    }
+    .basket-item__value:last-child {
+        float: right;
+        font-family: DINPro, Arial, sans-serif;
+        font-weight: bold;
+        font-style: normal;
+        font-stretch: normal;
+        font-size: 24px;
+        color: #64b357;
+        text-align: right;
+        margin-top: 20px;
+        margin-right: -20px;
+    }
+    .basket-item__value:nth-child(4) {
+        font-family: DINPro, Arial, sans-serif;
+        font-weight: bold;
+        font-style: normal;
+        font-stretch: normal;
+        font-size: 16px;
+        color: #64b357;
+        text-align: right;
+        margin-top: 15px;
+    }
+    .basket-total span:first-child {
+        font-size: 18px;
+        color: #252525;
+        font-family: DINPro, Arial, sans-serif;
+        font-weight: bold;
+        font-style: normal;
+        font-stretch: normal;
+        text-transform: uppercase;
+        margin-bottom: 10px;
+    }
+    .basket-total span:last-child {
+        font-family: DINPro, Arial, sans-serif;
+        font-weight: bold;
+        font-style: normal;
+        font-stretch: normal;
+        font-weight: normal;
+        font-size: 24px;
+        line-height: 12px;
+        color: #64b357;
+    }
+
+    .basket-total {
+        height: auto;
+    }
+
+    .xs_padding_0 {
+        padding: 0px;
+    }
+    .xs_margin_0 {
+        margin: 0px;
+    }
+    .cabinet-head__buttons .button-white + .button-white {
+        margin-left: 10px;
+    }
+    .cabinet-head__buttons .button-white {
+        vertical-align: middle;
+        height: 30px;
+        line-height: 30px;
+        min-width: 78px;
+        font-size: 12px;
+        width: 114px;
+    }
+    .cabinet_padding_20 {
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+        .panelMenu.in .bl_chose_days_btn {
+            padding: 0;
+            border-bottom: solid 1px #252525;
+            border-right: solid 1px #252525;
+            border-left: solid 1px #252525;
+            margin-left: 1px; }
+
+        .bl_chose_days_btn .button, .bl_chose_days_btn .button-white {
+            width: 50%;
+            padding: 0;
+            text-align: center;
+        }
+
+        .btn_mobile_1 a.button, a.button-white {
+            line-height: 30px;
+            cursor: pointer;
+        }
+
+        .bl_chose_days_btn .one_product_price button, input[type="button"], [role="button"], .button, .button-white {
+            padding: 0px;
+            display: inline-block;
+            /* border: none; */
+            border: 1px solid #64b357;
+            border-radius: 0;
+            -webkit-appearance: none;
+            -moz-appearance: none;
+            appearance: none;
+            text-decoration: none;
+            /* cursor: default; */
+            cursor: pointer;
+            height: 30px;
+            background-color: #64b357;
+            color: white;
+            font: inherit;
+            font-size: 12px;
+            font-family: DINPro, Arial, sans-serif;
+            font-weight: bold;
+            font-style: normal;
+            font-stretch: normal;
+            padding: 0 20px;
+            width: auto;
+            min-width: 100%;
+            -webkit-user-select: none;
+            -moz-user-select: none;
+            -ms-user-select: none;
+            user-select: none;
+            text-align: center;
+            line-height: normal;
+            outline: none;
+            text-transform: uppercase;
+        }
+
+        .bl_chose_days_c_bottom_price span{
+            font-family: DINPro;
+            font-size: 12px;
+            font-weight: bold;
+            font-style: normal;
+            font-stretch: normal;
+            text-align: center;
+        }
+
+        .panelMenu.in .bl_chose_days_c_bl {
+            margin-bottom: 0px;
+        }
+        .bl_chose_days_c_bottom_price {
+            padding: 0px 0px 6px 0px;
+            border-bottom: solid 1px #252525;
+            border-left: solid 1px #252525;
+            margin-left: -1px;}
+    }
+
+    .panelMenu {
+        border: none;
+    }
+    .panelMenu.in {
+        position: fixed;
+        width: auto;
+        overflow-y: auto;
+        overflow-x: hidden;
+    }
+    .panelMenu.in .bl_chose_days_c_descr {
+        display: inherit;
+    }
+    .bl_chose_days_c_descr {
+        border-top: solid 1px #252525;
+        font-family: GothamPro;
+        font-size: 12px;
+        font-weight: 300;
+        font-style: normal;
+        font-stretch: normal;
+        line-height: 1.2;
+        color: #252525;
+        position: relative;
+        padding: 9px 15px 9px 30px;
+        margin-top: -64px;
+        /* position: relative; */
+        /* z-index: 1000; */
+        background: #fff;
+    }
+    .bl_chose_days_c_checkboxs {
+        position: relative;
+        padding: 8px 30px;
+    }
+    .panel-popup-button {
+        /* background: #fff; */
+        position: fixed;
+        top: 50%;
+        right: 0;
+        margin-top: -110px;
+        /* margin-left: -80px; */
+        padding: 20px 14px;
+        box-sizing: border-box;
+        text-align: center;
+        width: 30px;
+        height: 140px;
+        border-left: 1px solid #252525;
+        border-top: 1px solid #252525;
+        border-bottom: 1px solid #252525;
+        font-family: DINPro, Arial, sans-serif;
+        font-weight: bold;
+        font-style: normal;
+        font-stretch: normal;
+        font-weight: 300;
+        color: #252525;
+        text-transform: uppercase;
+        cursor: pointer;
+        z-index: 1000;
+        background: #84c37a;
+        color: #fff;
+        border: 1px solid #84c37a;
+    }
+    .panel-popup-button .panel-popup-button-content {
+        position: fixed;
+        margin-left: -100px;
+        margin-top: -52px;
+        top: 50%;
+        width: 220px;
+        height: 30px;
+        -webkit-transform: rotate(270deg);
+        transform: rotate(270deg);
+        text-align: center;
+        font-size: 12px;
+    }
+
+
 }
+
 
 
 
@@ -7080,7 +7376,7 @@ display:none;
     position: relative;
     float: right;
     z-index: 1000;
-    height: 100px;
+    /*height: 100px;*/
 }
 
 .imege_height {
