--- a/local/templates/main/css/template.css
+++ b/local/templates/main/css/template.css
@@ -1455,16 +1455,17 @@ h1 {
 .form-row > * {
     float: left;
 }
-.form-row .label {
-    min-height: 1px;
-    width: calc(100% - 60px);
-    line-height: 32px;
-    font-family: DINPro, Arial, sans-serif;
-    font-weight: bold;
-    font-style: normal;
-    font-stretch: normal;
-    text-transform: uppercase;
-}
+    .form-row .label  {
+        min-height: 1px;
+        line-height: 32px;
+        text-transform: uppercase;
+        font-family: DINPro;
+        font-size: 12px;
+        font-weight: bold;
+        font-style: normal;
+        font-stretch: normal;
+        color: #252525;
+    }
 .form-row .label + .input {
     width: 100%;
 }
@@ -1511,12 +1512,12 @@ input[type="tel"] {
     width: 100%;
     height: 18px;
     font: inherit;
-    font-size: 15px;
+    font-size: 12px;
     line-height: 2;
     color: #878787;
 }
 .hei4 textarea {
-    font-size: 15px;
+    font-size: 12px !important;
     border: none;
     outline: none;
     box-shadow: none;
@@ -7456,6 +7457,8 @@ display:none;
     .bl_purchase_terms_btn .button, .bl_purchase_terms_btn .button-white {
         min-width: 138px;
     }
+
+
 
 }
 
