--- a/local/templates/main/template_styles.css
+++ b/local/templates/main/template_styles.css
@@ -8663,3 +8663,7 @@ a.button, a.button-white {
     -moz-transition: 1s;
     -o-transition: 1s;
 }
+
+.mobileNavMenu .menu-active {
+    color: #64b357;
+}
