--- a/local/templates/main/css/template.css
+++ b/local/templates/main/css/template.css
@@ -1412,16 +1412,17 @@ h1 {
 .order_step p {
     background: #f8f8f8;
     display: block;
-    margin-left: 84px;
-    padding: 31px 15px 35px 77px;
+    margin-left: 0px;
+    padding: 21px 20px 28px 77px;
     font-family: DINPro;
-    font-size: 14px;
+    font-size: 18px;
     font-weight: 300;
     font-style: normal;
     font-stretch: normal;
     color: #252525;
     text-transform: uppercase;
     line-height: 1.3;
+    min-height: 96px;
 }
 .txt1 {
     font-size: 14px;
@@ -1474,6 +1475,7 @@ h1 {
 }
 .form-row .label.big + .input {
     width: 100%;
+    text-align: center;
 }
 .form-row .input-short {
     width: 220px !important;
@@ -1692,7 +1694,7 @@ input[type="tel"] {
     z-index: 120;
 }
 .container2 {
-    width: calc(100% - 60px);
+    width: calc(100% - 30px);
     height: 90px;
     margin-right: auto;
     margin-left: auto;
@@ -1735,13 +1737,14 @@ input[type="tel"] {
 .bl_filter_item span {
     display: inline-block;
     vertical-align: middle;
-    margin-right: 7px;
+    margin-right: 0px;
     font-family: DINPro;
-    font-size: 10px;
+    font-size: 12px;
     font-weight: bold;
     font-style: normal;
     font-stretch: normal;
     color: #252525;
+    margin-left: 5px;
 }
 .one_product_price {
     margin-right: 15px;
@@ -1792,6 +1795,7 @@ input[type="tel"] {
 }
 .bl_filter_item {
     width: 40%;
+    text-align: left;
 }
 .bl_catalog_filter_left {
     margin: 0 0px 0 45px;
@@ -1818,14 +1822,15 @@ input[type="tel"] {
 .bl_filter_item a.sort {
     display: inline-block;
     vertical-align: middle;
-    margin-right: 7px;
+    margin-right: 0px;
     font-family: DINPro;
-    font-size: 10px;
+    font-size: 12px;
     font-weight: bold;
     font-style: normal;
     font-stretch: normal;
     color: #252525;
     text-decoration: none;
+    margin-left: 5px;
 }
 .bl_filter_item .sort {
     cursor: pointer;
@@ -6850,7 +6855,7 @@ display:none;
   margin-bottom: 30px; }
   
 .but1 {
-    margin-top: 30px;
+    margin-top: 52px;
     text-align: center;
 }
 .bl_menu_cont {
@@ -7263,6 +7268,7 @@ display:none;
         .btn_mobile_1 a.button, a.button-white {
             line-height: 30px;
             cursor: pointer;
+            min-width: 108px;
         }
 
         .bl_chose_days_btn .one_product_price button, input[type="button"], [role="button"], .button, .button-white {
@@ -7323,12 +7329,18 @@ display:none;
     }
     .panelMenu.in {
         position: fixed;
-        width: auto;
-        overflow-y: visible;
-        overflow-x: visible;
+        width: 260px;
+        overflow-y: auto;
+        overflow-x: hidden;
     }
     .panelMenu.in .bl_chose_days_c_descr {
         display: inherit;
+    }
+    .panelMenu {
+    background: none;
+    }
+    .bl_chose_days_c_bl {
+        background: #fff;
     }
     .bl_chose_days_c_descr {
         border-top: solid 1px #252525;
@@ -7457,6 +7469,84 @@ display:none;
     .bl_purchase_terms_btn .button, .bl_purchase_terms_btn .button-white {
         min-width: 138px;
     }
+    button, input[type="button"], [role="button"], .button, .button-white {
+        display: inline-block;
+        /* border: none; */
+        border: 1px solid #64b357;
+        border-radius: 0;
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        appearance: none;
+        text-decoration: none;
+        /* cursor: default; */
+        cursor: pointer;
+        height: 30px;
+        background-color: #64b357;
+        color: white;
+        font: inherit;
+        font-size: 12px;
+        font-family: DINPro, Arial, sans-serif;
+        font-weight: bold;
+        font-style: normal;
+        font-stretch: normal;
+        padding: 0 20px;
+        width: auto;
+        min-width: 138px;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+        text-align: center;
+        line-height: normal;
+        outline: none;
+        text-transform: uppercase;
+        /* text-align: center; */
+        /* float: inherit; */
+    }
+
+    .order_step span.number:after {
+        display: none;
+    }
+
+    .order_step span.number {
+        position: absolute;
+        left: 25px;
+        top: 15px;
+        width: 60px;
+        height: 60px;
+        font-family: DINPro;
+        font-size: 52px;
+        font-weight: bold;
+        font-style: normal;
+        font-stretch: normal;
+        line-height: 1;
+        color: #64b357;
+        z-index: 600;
+    }
+    .p_order_delivery p {
+        width: 100%;
+        font-family: GothamPro;
+        font-size: 12px;
+        font-weight: normal;
+        font-style: normal;
+        font-stretch: normal;
+        line-height: 2;
+        color: #878787;
+    }
+
+    .p_order_doc .button-white {
+        line-height: 30px;
+        width: 100%;
+    }
+
+    .bl_partner_item::before {
+        display: none;
+    }
+
+    .bl_chose_days {
+        background: #ffffff;
+    }
+
 
 
 
